cmake_minimum_required(VERSION 3.12)
project(popcorn)

if     (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
    if     (NOT EXISTS ${CMAKE_BINARY_DIR}/lib/klever)
        if   (NOT EXISTS "/usr/bin/git")
            if    (EXISTS "/usr/bin/dnf")
                execute_process("sudo -S dnf install -y git")
            elseif(EXISTS "/usr/bin/apt")
                execute_process("sudo -S apt-get install -y git")
            endif ()
        endif()
        if    (NOT EXISTS ${CMAKE_BINARY_DIR}/lib)
            file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
        endif ()
        execute_process(COMMAND git clone https://github.com/gunnerDgd/klever -b v0-dev WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
    endif()
    include(${CMAKE_BINARY_DIR}/lib/klever/CMakeLists.txt)
endif()

if     (PRESET_BUILD_ARCH STREQUAL "x86_64")
    add_compile_definitions(PRESET_ARCH_X86_64)
    add_compile_definitions(PRESET_ARCH_BIT=64)
endif()

if   (UNIX AND NOT APPLE)
    add_compile_definitions(PRESET_LINUX)
endif()

add_subdirectory(src)
if   (UNIX AND NOT APPLE)
    add_subdirectory(linux)
endif()

if   (PRESET_BUILD_EXAMPLE)
    add_subdirectory(example)
endif()